# intodotspace

./: .gitignore  ADMIN_PANEL_SETUP.md  Anchor.toml  BETA_GATE_SETUP.md  Cargo.toml  FEATURES.md  FRONTEND_WEBSOCKET_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  LIQUIDATION_SCALING_GUIDE.md  LIQUIDATION_TESTING_GUIDE.md  README.md  SPACE_PREDICTION_MARKET_DOCS.md  TEST_INSTRUCTIONS.md  VALIDATOR_SETUP.md  WEBSOCKET_API_IMPLEMENTATION.md  package-lock.json  package.json  playground-execute-order.ts  run-tests.ps1  start-validator.ps1  tsconfig.json
.cargo/: config.toml
backend/: BACKEND_SETUP.md  generated-codes-1772655056701.txt  jest.config.js  package-lock.json  package.json  render.yaml  tsconfig.json
frontend/: README_ADMIN.md  next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
programs/space-core/: Cargo.toml
programs/space-core/src/: constants.rs  errors.rs  helpers.rs  lib.rs  utils.rs
programs/space-core/src/instructions/: config.rs  contexts.rs  governance.rs  liquidation.rs  market.rs  matching.rs  mod.rs  orders.rs  positions.rs  resolution.rs  shares.rs
programs/space-core/src/state/: config.rs  enums.rs  market.rs  match_state.rs  mod.rs  order.rs  position.rs
scripts/: README.md  backfillMarketQuoteInfo.ts  convert-keeper-simple.js  convert-private-key-to-keeper.js  create-test-space.js  create-test-usdc.js  create-test-usdc.ps1  create-test-usdc.sh  fundLiquidityVault.ts  generate-keeper-keypair.js  migrateMarketsToV2.ts  seedOrderBook.ts  setup-keeper-from-private-key.md  setup-your-keeper.js  (+7 more)
(+229 files in other folders)
