[package]
name = "space-core"
version = "0.1.0"
description = "Core prediction market program for Space"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "space_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
blake3 = "=1.7.0"
constant_time_eq = "=0.3.1"
